@@ -22,13 +22,12 @@ import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.ExitCodeGenerator;
 import org.springframework.boot.SpringApplication;
 import org.springframework.context.ApplicationContext;
 import org.springframework.stereotype.Service;
 import pl.edu.agh.hiputs.communication.model.messages.MapReadyToReadMessage;
-import pl.edu.agh.hiputs.communication.model.messages.ServerInitializationMessage;
 import pl.edu.agh.hiputs.communication.model.messages.RunSimulationMessage;
+import pl.edu.agh.hiputs.communication.model.messages.ServerInitializationMessage;
 import pl.edu.agh.hiputs.communication.model.messages.ShutDownMessage;
 import pl.edu.agh.hiputs.communication.model.serializable.ConnectionDto;
 import pl.edu.agh.hiputs.communication.model.serializable.WorkerDataDto;
@@ -45,18 +44,19 @@ import pl.edu.agh.hiputs.partition.persistance.PatchesGraphWriter;
 import pl.edu.agh.hiputs.partition.service.MapFragmentPartitioner;
 import pl.edu.agh.hiputs.partition.service.MapStructureLoader;
 import pl.edu.agh.hiputs.service.ConfigurationService;
-import pl.edu.agh.hiputs.service.server.StatisticSummaryService;
 import pl.edu.agh.hiputs.service.server.WorkerSynchronisationService;
 import pl.edu.agh.hiputs.service.worker.usecase.MapRepositoryServerHandler;
+import pl.edu.agh.hiputs.statistics.SimulationPoint;
+import pl.edu.agh.hiputs.statistics.server.StatisticSummaryService;
 
 @Slf4j
+// @Primary
 @Service
 @RequiredArgsConstructor
 public class ServerStrategyService implements Strategy {
 
   private final WorkerSynchronisationService workerSynchronisationService;
   private final ConnectionInitializationService connectionInitializationService;
-  private final ConfigurationService configurationService;
   private final WorkerStrategyService workerStrategyService;
   private final MapFragmentPartitioner mapFragmentPartitioner;
   private final ExecutorService workerPrepareExecutor = newSingleThreadExecutor();
@@ -66,44 +66,51 @@ public class ServerStrategyService implements Strategy {
 
   private final MapRepositoryServerHandler mapRepository;
   private final PatchesGraphReader patchesGraphReader;
-
   private final PatchesGraphWriter patchesGraphWriter;
-
   private final WorkerRepository workerRepository;
-
   private final GraphCoherencyUtil graphCoherencyUtil;
 
   @Override
   public void executeStrategy() throws InterruptedException {
 
     log.info("Running server");
+    statisticSummaryService.startStage(SimulationPoint.SERVER_APP);
+    statisticSummaryService.startStage(SimulationPoint.SERVER_INITIALIZATION);
     connectionInitializationService.init();
     workerPrepareExecutor.submit(new PrepareWorkerTask());
 
-    Path mapPackagePath = configurationService.getConfiguration().isReadFromOsmDirectly()
-        ? generateDeploymentPackageName(Path.of(configurationService.getConfiguration().getMapPath()))
-        : Path.of(configurationService.getConfiguration().getMapPath());
+    statisticSummaryService.startStage(SimulationPoint.SERVER_INIT_MAP);
+    Path mapPackagePath =
+        ConfigurationService.getConfiguration().isReadFromOsmDirectly() ? generateDeploymentPackageName(
+            Path.of(ConfigurationService.getConfiguration().getMapPath()))
+            : Path.of(ConfigurationService.getConfiguration().getMapPath());
 
-    Graph<PatchData, PatchConnectionData> patchesGraph = configurationService.getConfiguration().isReadFromOsmDirectly()
-        ? createAndSavePatchesPackage(mapPackagePath)
-        : patchesGraphReader.readGraphWithPatches(mapPackagePath);
+    Graph<PatchData, PatchConnectionData> patchesGraph =
+        ConfigurationService.getConfiguration().isReadFromOsmDirectly() ? createAndSavePatchesPackage(mapPackagePath)
+            : patchesGraphReader.readGraphWithPatches(mapPackagePath);
 
     mapRepository.setPatchesGraph(patchesGraph);
+    statisticSummaryService.endStage(SimulationPoint.SERVER_INIT_MAP);
 
     log.info("Start waiting for all workers be in state WorkerConnection");
     workerSynchronisationService.waitForAllWorkers(WorkerConnectionMessage);
 
-
-    if (configurationService.getConfiguration().isReadFromOsmDirectly()) {
-      messageSenderServerService.broadcast(MapReadyToReadMessage.builder().mapPackagePath(mapPackagePath.toString()).build());
+    statisticSummaryService.startStage(SimulationPoint.SERVER_MAP_PARTITION);
+    if (ConfigurationService.getConfiguration().isReadFromOsmDirectly()) {
+      messageSenderServerService.broadcast(
+          MapReadyToReadMessage.builder().mapPackagePath(mapPackagePath.toString()).build());
     }
 
-    Collection<Graph<PatchData, PatchConnectionData>> mapFragmentsContents = mapFragmentPartitioner.partition(patchesGraph);
+    Collection<Graph<PatchData, PatchConnectionData>> mapFragmentsContents =
+        mapFragmentPartitioner.partition(patchesGraph);
 
     calculateAndDistributeConfiguration(mapFragmentsContents);
+    statisticSummaryService.endStage(SimulationPoint.SERVER_MAP_PARTITION);
 
     log.info("Waiting for all workers be in state CompletedInitialization");
     workerSynchronisationService.waitForAllWorkers(CompletedInitializationMessage);
+
+    statisticSummaryService.endStage(SimulationPoint.SERVER_INITIALIZATION);
 
     // if(!graphCoherencyUtil.validateEndModel()){
     //   log.error("the graph is not consistent");
@@ -111,21 +118,28 @@ public class ServerStrategyService implements Strategy {
     //   Thread.sleep(1000);
     //   shutDown();
     // }
-
+    statisticSummaryService.startStage(SimulationPoint.SERVER_SIMULATION);
     distributeRunSimulationMessage(mapFragmentsContents);
 
     log.info("Waiting for end simulation");
     workerSynchronisationService.waitForAllWorkers(FinishSimulationMessage);
     log.info("Simulation finished");
 
-    if (configurationService.getConfiguration().isStatisticModeActive()) {
+    statisticSummaryService.endStage(SimulationPoint.SERVER_SIMULATION);
+
+    if (ConfigurationService.getConfiguration().isStatisticModeActive()) {
       workerSynchronisationService.waitForAllWorkers(FinishSimulationStatisticMessage);
       log.info("Start generating summary");
+      statisticSummaryService.endStage(SimulationPoint.SERVER_APP);
+
+      long t0 = System.currentTimeMillis();
       generateReport();
+      long t1 = System.currentTimeMillis();
+      System.out.print(t1 - t0);
     }
 
     messageSenderServerService.broadcast(new ShutDownMessage());
-    Thread.sleep(1000);
+    Thread.sleep(500);
     shutDown();
   }
 
@@ -139,9 +153,10 @@ public class ServerStrategyService implements Strategy {
       String workerId = workerIdsIterator.next();
       Graph<PatchData, PatchConnectionData> mapFragmentContent = mapFragmentContentIterator.next();
 
-      patchId2workerId.putAll(
-          mapFragmentContent.getNodes().keySet().stream().collect(Collectors.toMap(Function.identity(), e -> workerId))
-      );
+      patchId2workerId.putAll(mapFragmentContent.getNodes()
+          .keySet()
+          .stream()
+          .collect(Collectors.toMap(Function.identity(), e -> workerId)));
     }
 
     workerIdsIterator = workerRepository.getAllWorkersIds().iterator();
@@ -149,15 +164,17 @@ public class ServerStrategyService implements Strategy {
 
     //prepare serverInitMessage for each worker
     Map<String, ServerInitializationMessage> workerId2ServerInitializationMessage = new HashMap<>();
-    boolean bigWorkerSelected = false;
+    boolean bigWorkerSelected = ConfigurationService.getConfiguration().getNumberOfCarsInBigWorker() > 0;
 
-    while(workerIdsIterator.hasNext() && mapFragmentContentIterator.hasNext()) {
+    while (workerIdsIterator.hasNext() && mapFragmentContentIterator.hasNext()) {
       String workerId = workerIdsIterator.next();
       Graph<PatchData, PatchConnectionData> mapFragmentContent = mapFragmentContentIterator.next();
 
       //calculate shadow patches
-      Set<String> shadowPatchesIds = mapFragmentContent.getNodes().values()
-          .stream().flatMap(n -> Stream.concat(n.getIncomingEdges().stream(), n.getOutgoingEdges().stream()))
+      Set<String> shadowPatchesIds = mapFragmentContent.getNodes()
+          .values()
+          .stream()
+          .flatMap(n -> Stream.concat(n.getIncomingEdges().stream(), n.getOutgoingEdges().stream()))
           .distinct()
           .flatMap(e -> Stream.of(e.getSource(), e.getTarget()))
           .map(Node::getId)
@@ -182,16 +199,16 @@ public class ServerStrategyService implements Strategy {
               .address(workerRepository.get(e.getKey()).getAddress())
               .port(workerRepository.get(e.getKey()).getPort())
               .build()))
-          .toList();
+          .collect(Collectors.toList());
 
       ServerInitializationMessage serverInitializationMessage = ServerInitializationMessage.builder()
           .patchIds(mapFragmentContent.getNodes().keySet().stream().toList())
           .workerInfo(workerDataDtos)
-          .bigWorker(!bigWorkerSelected)
+          .bigWorker(bigWorkerSelected)
           .build();
 
-      if(!bigWorkerSelected){
-        bigWorkerSelected = true;
+      if (bigWorkerSelected) {
+        bigWorkerSelected = false;
       }
       workerId2ServerInitializationMessage.put(workerId, serverInitializationMessage);
     }
@@ -212,9 +229,9 @@ public class ServerStrategyService implements Strategy {
   private Graph<PatchData, PatchConnectionData> createAndSavePatchesPackage(Path mapPackagePath) {
     log.info("Start reading map");
     Graph<PatchData, PatchConnectionData> patchesGraph;
-    if (configurationService.getConfiguration().isReadFromOsmDirectly()) {
+    if (ConfigurationService.getConfiguration().isReadFromOsmDirectly()) {
       log.info("Reading map from osm file");
-      patchesGraph = mapStructureLoader.loadFromOsmFile(Path.of(configurationService.getConfiguration().getMapPath()));
+      patchesGraph = mapStructureLoader.loadFromOsmFile(Path.of(ConfigurationService.getConfiguration().getMapPath()));
 
       log.info("Writing map with patches");
       createDeploymentPackageDir(mapPackagePath);
@@ -223,7 +240,8 @@ public class ServerStrategyService implements Strategy {
     } else {
       //read existing map
       log.info("Reading map from import package - patch partition skipped");
-      patchesGraph = mapStructureLoader.loadFromCsvImportPackage(Path.of(configurationService.getConfiguration().getMapPath()));
+      patchesGraph =
+          mapStructureLoader.loadFromCsvImportPackage(Path.of(ConfigurationService.getConfiguration().getMapPath()));
     }
 
     log.info("Reading map finished successfully");
@@ -244,7 +262,7 @@ public class ServerStrategyService implements Strategy {
   @Autowired
   private ApplicationContext context;
   private void shutDown() {
-    int exitCode = SpringApplication.exit(context, (ExitCodeGenerator) () -> 0);
+    int exitCode = SpringApplication.exit(context, () -> 0);
     System.exit(exitCode);
   }
 
@@ -253,10 +271,10 @@ public class ServerStrategyService implements Strategy {
     @Override
     public void run() {
       try {
-        Thread.sleep(1000);
+        Thread.sleep(1);
         workerStrategyService.executeStrategy();
-      } catch (InterruptedException e) {
-        log.error("Worker not started", e);
+        // } catch (InterruptedException e) {
+        //   log.error("Worker not started", e);
       } catch (Exception e) {
         log.error("Unexpected exception occurred", e);
       }
